--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -44,4 +45,21 @@ nav li {
 nav a {
     text-decoration: none;
     color:  #474747;
+}
+
+/* header related styles */
+.header {
+    background: #FFF8F3;
+}
+
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+
+}
+
+.profile-pic{
+    width: 400px;
+    height: 500px;
 }
