--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -17,6 +17,21 @@ body {
     padding: 15px 35px;
 
 }
+
+.section-title {
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
 /* nav related styles */
 nav {
     display: flex;
@@ -50,12 +65,16 @@ nav a {
 /* header related styles */
 .header {
     background: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
 }
 
@@ -63,3 +82,34 @@ nav a {
     width: 400px;
     height: 500px;
 }
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner-greetings {
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 0px;
+}
+
+.banner-title {
+    font-size: 85px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description {
+    margin-top: 0px;
+}
+
+
+/* main section styles */
+.about {
+    padding: 200px 150px 200px 150px;
+    border-radius: 10px;
+    background-color: #fae8db;
+    margin: 130px 0px;
+}
+/* about section styles */
