--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -109,10 +109,11 @@ nav a {
 main {
     max-width: 1140px;
     margin: 0px auto;
+    margin-top: 130px;
 }
 /* about section styles */
 .about {
-    padding: 200px 150px 200px 150px;
+    padding: 150px 150px 150px 150px;
     border-radius: 10px;
     background-color: #fae8db;
     margin: 130px 0px;
@@ -138,4 +139,28 @@ main {
 /* what i do section */
 #what-i-do-description {
     padding: 30px 150px;
+}
+
+/* skiil section */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skills {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skills-description  {
+    padding: 30px;
+    color:  #757575;
+}
+
+/* resume section */
+.resume-colum-title {
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
