--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -164,3 +164,34 @@ main {
     font-size: 30px;
     font-weight: 700;
 }
+
+.resume-container {
+    display: flex;
+    gap: 50px ;
+}
+
+.resume-item-title {
+    color: var(--dark-02, #0c0c0c);
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 0px;
+
+}
+
+.resume-item-description , .resume-item-institute{
+    color: var(--dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+.resume-container hr {
+    margin: 30px 0px;
+}
+
+.download-cv {
+    margin-top: 50px;
+    text-align: center;
+}
