--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -195,3 +195,11 @@ main {
     margin-top: 50px;
     text-align: center;
 }
+
+/* footer section */
+footer {
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
