--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -65,9 +65,9 @@ nav a {
 /* header related styles */
 .header {
     background: #FFF8F3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png') , url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right , top left;
 }
 
 .banner {
@@ -79,8 +79,8 @@ nav a {
 }
 
 .profile-pic{
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: 600px;
 }
 
 .banner-content {
